@@ -1,45 +1,35 @@
 package org.schabi.newpipe;
 
-import android.app.NotificationChannel;
-import android.app.NotificationManager;
+import android.app.Application;
 import android.content.Context;
 import android.content.SharedPreferences;
-import android.os.Build;
 import android.util.Log;
 
 import androidx.annotation.NonNull;
-import androidx.annotation.Nullable;
-import androidx.multidex.MultiDexApplication;
+import androidx.core.app.NotificationChannelCompat;
+import androidx.core.app.NotificationManagerCompat;
 import androidx.preference.PreferenceManager;
 
-import com.nostra13.universalimageloader.cache.memory.impl.LRULimitedMemoryCache;
-import com.nostra13.universalimageloader.core.ImageLoader;
-import com.nostra13.universalimageloader.core.ImageLoaderConfiguration;
+import com.jakewharton.processphoenix.ProcessPhoenix;
 
 import org.acra.ACRA;
-import org.acra.config.ACRAConfigurationException;
-import org.acra.config.CoreConfiguration;
 import org.acra.config.CoreConfigurationBuilder;
-import org.schabi.newpipe.error.ErrorActivity;
-import org.schabi.newpipe.error.ErrorInfo;
 import org.schabi.newpipe.error.ReCaptchaActivity;
-import org.schabi.newpipe.error.UserAction;
 import org.schabi.newpipe.extractor.NewPipe;
 import org.schabi.newpipe.extractor.downloader.Downloader;
 import org.schabi.newpipe.ktx.ExceptionUtils;
 import org.schabi.newpipe.settings.NewPipeSettings;
 import org.schabi.newpipe.util.Localization;
+import org.schabi.newpipe.util.PicassoHelper;
 import org.schabi.newpipe.util.ServiceHelper;
 import org.schabi.newpipe.util.StateSaver;
 
 import java.io.IOException;
 import java.io.InterruptedIOException;
 import java.net.SocketException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
-import io.reactivex.rxjava3.disposables.Disposable;
 import io.reactivex.rxjava3.exceptions.CompositeException;
 import io.reactivex.rxjava3.exceptions.MissingBackpressureException;
 import io.reactivex.rxjava3.exceptions.OnErrorNotImplementedException;
@@ -65,13 +55,10 @@ import io.reactivex.rxjava3.plugins.RxJavaPlugins;
  * along with NewPipe.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-public class App extends MultiDexApplication {
-    protected static final String TAG = App.class.toString();
-    private static App app;
+public class App extends Application {
     public static final String PACKAGE_NAME = BuildConfig.APPLICATION_ID;
-
-    @Nullable
-    private Disposable disposable = null;
+    private static final String TAG = App.class.toString();
+    private static App app;
 
     @NonNull
     public static App getApp() {
@@ -90,6 +77,12 @@ public class App extends MultiDexApplication {
 
         app = this;
 
+        if (ProcessPhoenix.isPhoenixProcess(this)) {
+            Log.i(TAG, "This is a phoenix process! "
+                    + "Aborting initialization of App[onCreate]");
+            return;
+        }
+
         // Initialize settings first because others inits can use its values
         NewPipeSettings.initSettings(this);
 
@@ -104,20 +97,20 @@ public class App extends MultiDexApplication {
         ServiceHelper.initServices(this);
 
         // Initialize image loader
-        ImageLoader.getInstance().init(getImageLoaderConfigurations(10, 50));
+        final SharedPreferences prefs = PreferenceManager.getDefaultSharedPreferences(this);
+        PicassoHelper.init(this);
+        PicassoHelper.setShouldLoadImages(
+                prefs.getBoolean(getString(R.string.download_thumbnail_key), true));
+        PicassoHelper.setIndicatorsEnabled(MainActivity.DEBUG
+                && prefs.getBoolean(getString(R.string.show_image_indicators_key), false));
 
         configureRxJavaErrorHandler();
-
-        // Check for new version
-        disposable = CheckForNewAppVersion.checkNewVersion(this);
     }
 
     @Override
     public void onTerminate() {
-        if (disposable != null) {
-            disposable.dispose();
-        }
         super.onTerminate();
+        PicassoHelper.terminate();
     }
 
     protected Downloader getDownloader() {
@@ -146,7 +139,7 @@ public class App extends MultiDexApplication {
                 if (throwable instanceof UndeliverableException) {
                     // As UndeliverableException is a wrapper,
                     // get the cause of it to get the "real" exception
-                    actualThrowable = throwable.getCause();
+                    actualThrowable = Objects.requireNonNull(throwable.getCause());
                 } else {
                     actualThrowable = throwable;
                 }
@@ -155,7 +148,7 @@ public class App extends MultiDexApplication {
                 if (actualThrowable instanceof CompositeException) {
                     errors = ((CompositeException) actualThrowable).getExceptions();
                 } else {
-                    errors = Collections.singletonList(actualThrowable);
+                    errors = List.of(actualThrowable);
                 }
 
                 for (final Throwable error : errors) {
@@ -202,15 +195,6 @@ public class App extends MultiDexApplication {
         });
     }
 
-    private ImageLoaderConfiguration getImageLoaderConfigurations(final int memoryCacheSizeMb,
-                                                                  final int diskCacheSizeMb) {
-        return new ImageLoaderConfiguration.Builder(this)
-                .memoryCache(new LRULimitedMemoryCache(memoryCacheSizeMb * 1024 * 1024))
-                .diskCacheSize(diskCacheSizeMb * 1024 * 1024)
-                .imageDownloader(new ImageDownloader(getApplicationContext()))
-                .build();
-    }
-
     /**
      * Called in {@link #attachBaseContext(Context)} after calling the {@code super} method.
      * Should be overridden if MultiDex is enabled, since it has to be initialized before ACRA.
@@ -220,55 +204,52 @@ public class App extends MultiDexApplication {
             return;
         }
 
-        try {
-            final CoreConfiguration acraConfig = new CoreConfigurationBuilder(this)
-                    .setBuildConfigClass(BuildConfig.class)
-                    .build();
-            ACRA.init(this, acraConfig);
-        } catch (final ACRAConfigurationException exception) {
-            exception.printStackTrace();
-            ErrorActivity.reportError(this, new ErrorInfo(exception,
-                    UserAction.SOMETHING_ELSE, "Could not initialize ACRA crash report"));
-        }
+        final CoreConfigurationBuilder acraConfig = new CoreConfigurationBuilder()
+                .withBuildConfigClass(BuildConfig.class);
+        ACRA.init(this, acraConfig);
     }
 
     private void initNotificationChannels() {
-        if (Build.VERSION.SDK_INT < Build.VERSION_CODES.O) {
-            return;
-        }
+        // Keep the importance below DEFAULT to avoid making noise on every notification update for
+        // the main and update channels
+        final List<NotificationChannelCompat> notificationChannelCompats = List.of(
+                new NotificationChannelCompat.Builder(getString(R.string.notification_channel_id),
+                        NotificationManagerCompat.IMPORTANCE_LOW)
+                        .setName(getString(R.string.notification_channel_name))
+                        .setDescription(getString(R.string.notification_channel_description))
+                        .build(),
+                new NotificationChannelCompat
+                        .Builder(getString(R.string.app_update_notification_channel_id),
+                        NotificationManagerCompat.IMPORTANCE_LOW)
+                        .setName(getString(R.string.app_update_notification_channel_name))
+                        .setDescription(
+                                getString(R.string.app_update_notification_channel_description))
+                        .build(),
+                new NotificationChannelCompat.Builder(getString(R.string.hash_channel_id),
+                        NotificationManagerCompat.IMPORTANCE_HIGH)
+                        .setName(getString(R.string.hash_channel_name))
+                        .setDescription(getString(R.string.hash_channel_description))
+                        .build(),
+                new NotificationChannelCompat.Builder(getString(R.string.error_report_channel_id),
+                        NotificationManagerCompat.IMPORTANCE_LOW)
+                        .setName(getString(R.string.error_report_channel_name))
+                        .setDescription(getString(R.string.error_report_channel_description))
+                        .build(),
+                new NotificationChannelCompat
+                        .Builder(getString(R.string.streams_notification_channel_id),
+                        NotificationManagerCompat.IMPORTANCE_DEFAULT)
+                        .setName(getString(R.string.streams_notification_channel_name))
+                        .setDescription(
+                                getString(R.string.streams_notification_channel_description))
+                        .build()
+        );
 
-        String id = getString(R.string.notification_channel_id);
-        String name = getString(R.string.notification_channel_name);
-        String description = getString(R.string.notification_channel_description);
-
-        // Keep this below DEFAULT to avoid making noise on every notification update for the main
-        // and update channels
-        int importance = NotificationManager.IMPORTANCE_LOW;
-
-        final NotificationChannel mainChannel = new NotificationChannel(id, name, importance);
-        mainChannel.setDescription(description);
-
-        id = getString(R.string.app_update_notification_channel_id);
-        name = getString(R.string.app_update_notification_channel_name);
-        description = getString(R.string.app_update_notification_channel_description);
-
-        final NotificationChannel appUpdateChannel = new NotificationChannel(id, name, importance);
-        appUpdateChannel.setDescription(description);
-
-        id = getString(R.string.hash_channel_id);
-        name = getString(R.string.hash_channel_name);
-        description = getString(R.string.hash_channel_description);
-        importance = NotificationManager.IMPORTANCE_HIGH;
-
-        final NotificationChannel hashChannel = new NotificationChannel(id, name, importance);
-        hashChannel.setDescription(description);
-
-        final NotificationManager notificationManager = getSystemService(NotificationManager.class);
-        notificationManager.createNotificationChannels(Arrays.asList(mainChannel,
-                appUpdateChannel, hashChannel));
+        final NotificationManagerCompat notificationManager = NotificationManagerCompat.from(this);
+        notificationManager.createNotificationChannelsCompat(notificationChannelCompats);
     }
 
     protected boolean isDisposedRxExceptionsReported() {
         return false;
     }
+
 }
